--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SwissRoute – טיול לשווייץ 2025",
+  "name": "SwissRoute – טיול שווייץ 2025",
   "short_name": "SwissRoute",
   "start_url": ".",
   "display": "standalone",
@@ -9,12 +9,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon192.png",
+      "src": "icons/icon192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon512.png",
+      "src": "icons/icon512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
