--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "SwissRoute – טיול שווייץ 2025",
+  "name": "SwissRoute – טיול שוויץ 2025",
   "short_name": "SwissRoute",
   "start_url": ".",
   "display": "standalone",
