--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,15 +8,15 @@
   "lang": "he",
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "icons/icon192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  {
+    "src": "/SwissRouteApp/icons/icon192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "/SwissRouteApp/icons/icon512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }
+]
 }
