--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "SwissRoute – טיול שווייץ 2025",
   "short_name": "SwissRoute",
-  "start_url": ".",
+  "start_url": "/SwissRouteApp/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007BFF",
@@ -9,12 +9,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icons/icon192.png",
+      "src": "/SwissRouteApp/icons/icon192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon512.png",
+      "src": "/SwissRouteApp/icons/icon512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
